# AnRAG

./: .gitignore  README.md  colab_benchmark.py  colab_benchmark_ragbench.ipynb  pyproject.toml  requirements.txt
anrag/: __init__.py  ablation.py  anchors.py  api.py  benchmark.py  benchmark_gt.py  benchmark_types.py  chunking.py  cli.py  config.py  documents.py  embedding.py  index.py  llm.py  metrics.py  models.py  ocr.py  parsing.py  pipeline.py  rerank.py  retrieval.py  store.py  text.py  text_parsing.py
anrag/web/: app.js  index.html  styles.css
benchmarks/sample/: corpus.txt  hotpot_sample.jsonl  qa.jsonl
brain/341c3ee0-a9fd-4cea-85e5-4ecfd8c822c7/scratch/: debug_benchmark.py
data/benchmark/: anrag.sqlite3
data/benchmark/indexes/: anchors.faiss  anchors.ids.json  chunks.faiss  chunks.ids.json
scratch_tmp/: debug_gt.sqlite3  hotpotqa_debug.jsonl
scratch_tmp/bench_run/: hotpotqa_dev_subset.jsonl  ragbench_covidqa_test_subset.jsonl
scripts/: run_benchmark.ps1
tests/: test_ablation.py  test_anchor_pipeline.py  test_benchmark_gt.py  test_metrics.py  test_plain_rag.py
