[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anrag"
version = "0.1.0"
description = "AnchorRAG research prototype with tree-aware retrieval."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "PyMuPDF",
  "faiss-cpu",
  "numpy",
  "scikit-learn",
  "rank-bm25",
  "ollama",
  "pydantic",
  "pydantic-settings",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["anrag*"]

[project.optional-dependencies]
benchmark = [
  "sentence-transformers>=2.2.2",
  "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
